# cloudforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml  pr_checks.yml
infra/live/: backend.tf  terragrunt.hcl
infra/live/dev/eks/: terragrunt.hcl
infra/live/dev/vpc/: terragrunt.hcl
infra/modules/eks/: data.tf  main.tf
infra/modules/vpc/: dynamodb.tf  main.tf  variables.tf
scripts/: install_infra_tools.sh
utils/: cidr_blocks.py  create_automation_user.py
